# AI-Powered-Real-Estate-VoIP-Calling-Agent-System

./: .gitignore  README.md  check_recordings.py  docker-compose.yml
backend/: .env  Dockerfile  pyproject.toml  real_estate.db  requirements.txt  seed_data.py  test_sas_url.py  test_ws.py
backend/alembic/: env.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/api/: __init__.py  admin.py  appointments.py  auth.py  calls.py  conversation_summaries.py  dashboard.py  elevenlabs_calls.py  elevenlabs_conversation_init.py  elevenlabs_webhook.py  leads.py  notifications.py  products.py  properties.py  reports.py  twilio_webhook.py
backend/app/middleware/: __init__.py  auth.py
backend/app/models/: __init__.py  appointment.py  audit_log.py  call.py  conversation_summary.py  elevenlabs_event_log.py  enquiry.py  lead.py  notification.py  product.py  property.py  user.py
backend/app/schemas/: __init__.py  appointment.py  auth.py  call.py  lead.py  notification.py  product.py  property.py  user.py
backend/app/services/: blob_service.py  elevenlabs_conversation_init_service.py  elevenlabs_tts.py  notification_realtime.py  notification_service.py  rag_service.py  report_service.py  solar_report_service.py  (+1 more)
backend/scripts/: seed_data.py  seed_products.py  seed_properties.py  test_vad.py
backend/tests/: test_call_lifecycle.py  test_call_number_sources.py  test_elevenlabs_audio_pipeline.py  test_elevenlabs_webhook.py  test_elevenlabs_webhook_idempotency.py  test_elevenlabs_webhook_signature.py  test_lead_assignment.py  test_tool_calls_and_booking.py
(+57 files in other folders)
