[tool.poetry]
name = "voip-agent-backend"
version = "1.0.0"
description = "AI-Powered Real Estate VoIP Calling Agent System"
authors = ["ABC Real Estate"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.25"}
aiosqlite = "^0.19.0"
asyncpg = "^0.29.0"
motor = "^3.3.2"
pymongo = "^4.6.1"
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"
openai = "^1.10.0"
aiofiles = "^23.2.1"
httpx = "^0.26.0"
alembic = "^1.13.1"
structlog = "^24.1.0"
elevenlabs = "^2.35.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.3"
pytest-cov = "^4.1.0"
httpx = "^0.26.0"
black = "^24.1.1"
ruff = "^0.1.14"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
exclude = ["scripts", "seed_data.py"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
